fix z-index

--- a/resources/scss/mosaic.toolbar.scss
+++ b/resources/scss/mosaic.toolbar.scss
@@ -2,7 +2,7 @@
 // $mosaic-toolbar-color: #2c6596;
 
 .mosaic-toolbar {
-    z-index: 1500;
+    z-index: 1000;
 }
 
 .mosaic-toolbar {
